refactor: complete module boundary decoupling + protect invoice route
- InvoiceController: invoice endpoint is now a protected route using
  @PreAuthorize with hasPermissionByRentCycleId - no more public token access
- PaymentStatementServiceImpl: removed all manual JWT parsing, JwtService,
  AuthFacade, AuthorizationService - service now contains pure business logic
- PaymentStatementService: simplified interface signature to generateStatementHtml(UUID)
- PropertyJoinCodeServiceImpl: replaced MembershipRoleCrudService, MembershipCrudService,
  RolePermissionCrudService with AuthFacade (getRoleForProperty, validateCanDelegateRole)
- PropertyRoleController: now routes through AuthFacade instead of PropertyRoleService directly
- AuthFacade/AuthFacadeImpl: added role management methods (getPropertyRoles,
  toggleRoleActive, updateRolePermissions, createCustomRole, getRoleForProperty,
  validateCanDelegateRole, existsByUserIdAndPropertyIdAndRoleCode)
- Cleaned stale cross-module imports: UnitCrudService, UserCrudService, JwtService, Claims
- ModuleBoundaryTest: expanded to 8 ArchUnit rules covering all 8 modules, 0 violations